ulogd2 (2.0.4-1) UNRELEASED; urgency=medium

  * New upstream release:
    - Disables database buffering by default. This was enabled unintentionally
      in 2.0.3.
    - New JSON output plugin.
  * Refresh patches to eliminate fuzz and incorporate upstream changes:
    - debian/patches/enable-nflog-by-default.patch
    - debian/patches/put-logfiles-in-var-log-ulog.patch

 -- Chris Boot <debian@bootc.net>  Sun, 13 Apr 2014 09:48:27 +0100

ulogd2 (2.0.3-2) unstable; urgency=low

  * Enable parallel build.
  * Enable GPG signature checking for uscan:
    - update debian/watch
    - add debian/upstream/signing-key.asc
  * Use dh-autoreconf instead of autotools-dev to fix FTBFS on newer
    architectures (e.g. arm64 and Ubuntu's ppc64el). (Closes: #735961)
  * Add --with-dbi-lib to configure options to work with newer libdbi which now
    lives in the multiarch lib directory. Thanks to Hideki Yamane for the patch.
    (Closes: #738407)

 -- Chris Boot <debian@bootc.net>  Sat, 22 Mar 2014 17:30:52 +0000

ulogd2 (2.0.3-1) unstable; urgency=low

  * New upstream release.
  * Refresh put-logfiles-in-var-log-ulog.patch.
  * Remove patches applied upstream:
    - nice-before-setuid.patch
    - write-pidfile.patch
    - improve-pid-file-handling.patch
    - nflog-close-handle-after-unbind.patch
  * Use ./configure --disable-silent-rules instead of make V=1.
  * Correct Vcs-Browser entry to point at gitweb on Alioth.
  * If the old ulogd init script exists during preinst, try to stop ulogd using
    that script. (Closes: #731257)

 -- Chris Boot <debian@bootc.net>  Tue, 03 Dec 2013 22:50:05 +0000

ulogd2 (2.0.2-4) unstable; urgency=low

  * Change priority of transitional packages to extra.
  * Change Vcs-{Browser,Git} to Alioth.
  * Update paths to docs in ulogd(8). (LP: #1232104)
  * Disable and remove old ulogd init script. (Closes: #729657, LP: #1250520)
    - Forcibly disable the init script in postinst.
    - Remove the script safely using rm_conffile.