@@ -1,0 +1,1 @@
+debian/tmp/usr/lib/*/ulogd/ulogd_output_JSON.so
